# ggram

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Error.cpp  Error.hpp  Makefile  README.md  a.out  error.cpp  error.hpp  features.md  main  main.cpp  main_template.cpp  options.cpp  options.h  output.cpp  parser.hpp  temm  temm.cpp  temp  temp.c  temp.cpp  template.cpp  test  test-do-work.cpp  test.cpp  test.gg  types.hpp
idea/: anonymous operator.txt
include/: Error.hpp  argument_handler.h  argument_handler.hpp  custom_exceptions.h  error.hpp  file_handler.hpp  global_defines.hpp  input_handler.hpp  options.h  options.hpp  utils.hpp  version.hpp.in
include/ctre/: ctre.hpp
include/error/: argument_error.hpp  file_errors.hpp  ggram_error.hpp  syntax_error.hpp
include/input_handler/: input_handler.hpp  types.hpp
include/lexme/: lexme.hpp
include/lib/: lib.hpp
include/regex/: ctre.hpp  lexme_regex.hpp  regex.hpp  types.hpp
include/rules/: generator.hpp  parser.hpp  rules.hpp  types.hpp
libs/: Makefile  ctre.hpp  lib.cpp  main.cpp
src/: CMakeLists.txt  Error.cpp  error.cpp  file_handler.cpp  input_handler.cpp  main.cpp  options.cpp  utils.cpp
src/error/: argument_error.cpp  file_error.cpp  ggram_error.cpp  syntax_error.cpp
src/lexme/: lexme.cpp
src/regex/: regex.cpp
src/rules/: generator.cpp  parser.cpp  rules.cpp
template/: Lexeme.cpp  Token.cpp  Token.cpp.part  head.cpp  head.cpp.part  head.hpp  lex.cpp  lex.cpp.part  main.cpp  main.cpp.part  main2.cpp  main2.cpp.part  template.cpp  token.cpp  valueExpression.cpp  valueExpression.cpp.part  valueExpression2.cpp.part  value_expression.cpp  value_expression2.cpp  value_expression3.cpp
test/: output.cpp  test  test.cpp  test.gg  test.py  test2  test2.asm  test2.cpp  test2.gg  test3  test3.cpp  test3.gg  test4  test4.cpp
